--- a/Pedido.API/appsettings.json
+++ b/Pedido.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Consul": {
+        "host": "consul",
+        "Discovery": {
+            "ServiceName": "pedidos-service",
+            "Hostname": "pedidos.api",
+            "Port": 8080
+        }
+    }
 }
