--- a/launchSettings.json
+++ b/launchSettings.json
@@ -5,7 +5,8 @@
       "commandVersion": "1.0",
       "serviceActions": {
         "pedidos.api": "StartDebugging",
-        "pizza.api": "StartDebugging"
+        "pizza.api": "StartDebugging",
+        "gateway.api": "StartDebugging"
       }
     }
   }
