Add rota api pizza

--- a/Gateway.API/appsettings.json
+++ b/Gateway.API/appsettings.json
@@ -18,6 +18,17 @@
                         "PathPattern": "{**catch-all}"
                     }
                 ]
+            },
+            "pizza-rota": {
+                "ClusterId": "pizzas-cluster",
+                "Match": {
+                    "Path": "pizzas/{**catch-all}"
+                },
+                "Transforms": [
+                    {
+                        "PathPattern": "{**catch-all}"
+                    }
+                ]
             }
         },
         "Clusters": {
@@ -25,6 +36,13 @@
                 "Destinations": {
                     "maquina1": {
                         "Address": "http://pedidosapi:8080"
+                    }
+                }
+            },
+            "pizzas-cluster": {
+                "Destinations": {
+                    "maquina1": {
+                        "Address": "http://pizzaapi:8080"
                     }
                 }
             }
