Corrige endereço de servico pizza

--- a/Pizza.API/appsettings.json
+++ b/Pizza.API/appsettings.json
@@ -10,7 +10,7 @@
         "host": "consul",
         "Discovery": {
             "ServiceName": "pizza-service",
-            "Hostname": "pizza.api",
+            "Hostname": "pizzaapi",
             "Port": 8080
         }
     }
