--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,17 @@ services:
     ports:
       - "5001:8500"
 
+  notificacoesapi:
+    image: brunoosilva/ms-notificacoesservice
+    # build:
+    #   context: .
+    #   dockerfile: NotificacoesAPI/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIROMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+    ports:
+      - "4001:8080"
+
   pedidosapi:
     # image: ${DOCKER_REGISTRY-}pedidosapi
     build:
