--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,12 @@ services:
     ports:
       - "3001:8080"
 
+  fake-smtp-server:
+    image: gessnerfl/fake-smtp-server:latest
+    container_name: "fake-smtp-server"
+    restart: always
+    ports:
+      # - 8025:8025      #expose smtp port
+      - 7001:8080      #expose web ui
+      - 7002:8081      #expose management api
+
