--- a/Gateway.API/appsettings.json
+++ b/Gateway.API/appsettings.json
@@ -29,6 +29,17 @@
                         "PathPattern": "{**catch-all}"
                     }
                 ]
+            },
+            "notificacoes-rota": {
+                "ClusterId": "notificacoes-cluster",
+                "Match": {
+                    "Path": "notificacoes/{**catch-all}"
+                },
+                "Transforms": [
+                    {
+                        "PathPattern": "{**catch-all}"
+                    }
+                ]
             }
         },
         "Clusters": {
@@ -43,6 +54,13 @@
                 "Destinations": {
                     "maquina1": {
                         "Address": "http://pizzaapi:8080"
+                    }
+                }
+            },
+            "notificacoes-cluster": {
+                "Destinations": {
+                    "maquina1": {
+                        "Address": "http://notificacoesapi:8080"
                     }
                 }
             }
